<resources>
    <string name="app_name">common</string>
    <string name="action_settings">Settings</string>
    <string name="enabled">enabled</string>
    <string name="unknown">Unknown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="version_code">Version code</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="msg_ok">OK</string>
    <string name="action_sort">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="sort_name">Name</string>
    <string name="sort_type">Type</string>
    <string name="sort_size">Size</string>
    <string name="sort_date">Date</string>
    <string name="action_select_all">Select All</string>
    <string name="action_delete">Delete</string>
    <string name="msg_operation_failed">Operation failed</string>
    <string name="action_search">Search</string>
    <string name="action_view">View</string>
    <string name="action_view_list">List view</string>
    <string name="action_view_grid">Grid view</string>
    <string name="action_view_gallery">Gallery view</string>
    <string name="user_apps">Installed apps</string>
    <string name="all_apps">All apps</string>
    <string name="preinstalled_apps">Preinstalled apps</string>
    <string name="source_from">Installed from</string>
    <string name="source_all">All</string>
    <string name="unknown_source">Unknown source</string>
    <string name="play_store" translatable="false">Play store</string>
    <string name="filter">Filter</string>
    <string name="search_name_or_package">App or package name</string>
    <string name="app_manager">App manager</string>
    <string name="package_name">Package name</string>
    <string name="amazon_play_store" translatable="false">Amazon app store</string>
    <string name="action_more">More</string>
</resources>
