<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view"
        android:title="@string/action_view">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_view_list"
                    android:title="@string/action_view_list"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_view_grid"
                    android:title="@string/action_view_grid"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_view_gallery"
                    android:title="@string/action_view_gallery"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_apps_all"
                    android:title="@string/all_apps"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_apps_user"
                    android:title="@string/user_apps"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_apps_system"
                    android:title="@string/preinstalled_apps"
                    app:showAsAction="never" />
            </group>

            <item
                android:id="@+id/action_installed_source"
                android:title="@string/source_from">
                <menu>
                    <group android:checkableBehavior="single">
                        <item
                            android:id="@+id/action_source_all"
                            android:title="@string/source_all"
                            app:showAsAction="never" />
                        <item
                            android:id="@+id/action_playstore"
                            android:title="@string/play_store"
                            app:showAsAction="never" />
                        <item
                            android:id="@+id/action_amazon_store"
                            android:title="@string/amazon_play_store"
                            app:showAsAction="never" />

                        <item
                            android:id="@+id/action_unknown"
                            android:title="@string/unknown_source"
                            app:showAsAction="never" />
                    </group>
                </menu>
            </item>
        </menu>
    </item>

</menu>